crates/reinhardt-query/tests/compile_fail/set_double_expiry.rs
fn main() {
    use reinhardt_query::nosql::redis::string::StringCommand;
    let _ = StringCommand::set("k", "v").ex(60).px(100);
}
